feat(accounts): add update endpoint and swagg
